tests/src/frontend/runtime/invalid/equals_dot2.sk
fun main(): void {
  x = Ref(-42);
  x.value=.negate()=.negate()
}
